@@ -1,3 +1,8 @@
+2002-05-28  Scott Goodwin  <scott@scottg.net>
+
+	* init.c: added some user-friendly error messages when key fails
+	to load in LoadKey routine.
+
 2002-05-27  Scott Goodwin  <scott@scottg.net>
 
 	* ssl.c: in NsOpenSSLDestroyConn, if socket is valid, we shut it
